minor hygiene, replace deprecated calls